--- a/Purchases/src/main/resources/application.properties
+++ b/Purchases/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/purchases
+spring.datasource.url=jdbc:postgresql://localhost:5432/purchasesdatabase
 spring.jpa.generate-ddl=true
