almost everything working, just need to figure out the html

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/customerpurchases
+spring.datasource.url=jdbc:postgresql://localhost:5432/customerdatabase
 spring.jpa.generate-ddl=true
